# rust-sdl2-wasm

./: .gitignore  Cargo.toml  README.md  Web.toml  build.rs
src/: main.rs  main_old.rs
