[package]
name = "rust-sdl2-wasm"
version = "0.1.0"
authors = ["Valerio Santinelli <santinelli@altralogica.it>"]
edition = "2018"

[dependencies]
sdl2 = { git="https://github.com/Rust-SDL2/rust-sdl2.git", branch="master", default-features = false, features = ["unsafe_textures"] }
stdweb = "0.4.17"
stb_image = "0.2.2"

[build-dependencies]
gl_generator = "0.5.3"
cmake = "0.1.17"
curl = "0.4.20"

[[bin]]
name = "main"
path = "src/main.rs"
